// Copyright (c) 2020 Timo Savola. All rights reserved.
// Use of this source code is governed by a BSD-style
// license that can be found in the LICENSE file.

syntax = "proto3";

package gate.server.web;

import "server/api/pb/server.proto";

option go_package = "gate.computer/gate/internal/webserverapi";

message IOConnection {
  bool connected = 1;
}

message ConnectionStatus {
  Status status = 1;
  bool input = 2;
}
